--- a/app/src/main/res/layout/model_parcel.xml
+++ b/app/src/main/res/layout/model_parcel.xml
@@ -16,7 +16,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -42,9 +41,9 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_gravity="center"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tv_amount"
@@ -58,12 +57,13 @@
                     android:textSize="@dimen/text_size_h5"
                     app:drawableStartCompat="@drawable/ic_point_black"
                     tools:text=" 523/=" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
                     android:text="Tk"
-                    android:textColor="@color/black"
-                    android:layout_marginLeft="5dp"/>
+                    android:textColor="@color/black" />
             </LinearLayout>
 
             <LinearLayout
@@ -96,29 +96,49 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_invoice"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="2">
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tv_customer_name"
-                style="@style/RobotoRegular"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="@dimen/five"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_h5"
-                tools:text="Atik Faysal" />
+                android:layout_weight="1">
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tv_phone"
-                style="@style/RobotoRegular"
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_customer_name"
+                    style="@style/RobotoRegular"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="@dimen/five"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_h5"
+                    tools:text="Atik Faysal" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="@dimen/five"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_h5"
-                tools:text="Atik Faysal" />
+                android:layout_weight="1">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_phone"
+                    style="@style/RobotoRegular"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="@dimen/five"
+                    android:textIsSelectable="true"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_h5"
+                    tools:hint="123456789" />
+
+            </LinearLayout>
+
+
+
 
         </LinearLayout>
 
@@ -132,6 +152,7 @@
             android:paddingEnd="@dimen/five"
             android:textColor="@color/black"
             android:textSize="@dimen/fifteen"
+            android:textStyle="bold"
             tools:text="Dhaka, Dhanmondi, Shukrabad" />
 
         <LinearLayout
@@ -160,6 +181,22 @@
                 app:drawableStartCompat="@drawable/ic_point_red"
                 tools:text="Merchant name: Atik Faysal" />
 
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_merchant_phn"
+                style="@style/RobotoRegular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/ten"
+                android:drawablePadding="@dimen/divider_height"
+                android:paddingStart="@dimen/divider_height"
+                android:paddingEnd="@dimen/divider_height"
+                android:textIsSelectable="true"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size_h5"
+                android:textStyle="bold"
+                app:drawableStartCompat="@drawable/ic_point_red"
+                tools:hint="01712654789" />
+
         </LinearLayout>
 
         <RelativeLayout
@@ -170,6 +207,7 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tv_status"
                 style="@style/RobotoMedium"
+                android:padding="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/parcel_info"
