--- a/app/src/main/res/layout/model_parcel.xml
+++ b/app/src/main/res/layout/model_parcel.xml
@@ -121,24 +121,30 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tv_phone"
                     style="@style/RobotoRegular"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:padding="@dimen/five"
-                    android:textIsSelectable="true"
                     android:textColor="@color/black"
+                    android:textIsSelectable="true"
                     android:textSize="@dimen/text_size_h5"
                     tools:hint="123456789" />
 
+                <ImageButton
+                    android:id="@+id/call"
+                    android:layout_width="50dp"
+                    android:layout_height="40dp"
+                    android:background="@color/white"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/call_start" />
+
             </LinearLayout>
-
-
-
 
         </LinearLayout>
 
@@ -181,21 +187,55 @@
                 app:drawableStartCompat="@drawable/ic_point_red"
                 tools:text="Merchant name: Atik Faysal" />
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tv_merchant_phn"
-                style="@style/RobotoRegular"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/ten"
-                android:drawablePadding="@dimen/divider_height"
-                android:paddingStart="@dimen/divider_height"
-                android:paddingEnd="@dimen/divider_height"
-                android:textIsSelectable="true"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_h5"
-                android:textStyle="bold"
-                app:drawableStartCompat="@drawable/ic_point_red"
-                tools:hint="01712654789" />
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tv_merchant_phn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:drawablePadding="@dimen/divider_height"
+                        android:paddingStart="@dimen/divider_height"
+                        android:paddingEnd="@dimen/divider_height"
+                        android:textColor="@color/black"
+                        android:textIsSelectable="true"
+                        android:textSize="@dimen/text_size_h5"
+                        android:textStyle="bold"
+                        app:drawableStartCompat="@drawable/ic_point_red"
+                        tools:hint="01712654789" />
+                    <ImageButton
+                        android:id="@+id/merchant_call"
+                        android:layout_width="50dp"
+                        android:layout_height="30dp"
+                        android:background="#B1B0B0"
+                        android:scaleType="fitXY"
+                        android:layout_marginLeft="5dp"
+                        android:src="@drawable/call_start" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+
+
+                </LinearLayout>
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
@@ -207,12 +247,12 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tv_status"
                 style="@style/RobotoMedium"
-                android:padding="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/parcel_info"
                 android:layout_alignParentEnd="true"
                 android:gravity="end|center_vertical"
+                android:padding="10dp"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="@dimen/twelve"
                 tools:text="Pickup Request" />
